<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="화면 설정" >

        <EditTextPreference
            app:key="id"
            app:title="소개글 추가"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:layout_width="wrap_content"
            app:defaultValue="#2C80CF"
            app:entries="@array/my_color"
            app:entryValues="@array/my_color_values"
            app:key="color"
            app:title="색상 선택"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:layout_width="wrap_content"
            app:defaultValue="#FF0000"
            app:entries="@array/my_font"
            app:entryValues="@array/my_font_values"
            app:key="font"
            app:title="글씨 스타일 선택"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="16.0f"
            app:entries="@array/my_size"
            app:entryValues="@array/my_size_values"
            app:key="size"
            app:title="글씨 크기 선택"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>